...
            android:id="@+id/id_tv_plan_name_label"
            android:layout_column="0"
            android:text="@string/plan_name" />

          <!--Plan name -->
          <EditText
            android:id="@+id/id_et_plan_name"
            android:layout_column="1"
            android:cursorVisible="true"
            android:inputType="text"
            android:minWidth="200dp"
            android:text="@={planData.planName}"
            tools:text="This is plan name." />
...
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:orientation="vertical">

        <Button
          android:id="@+id/id_btn_plan_create_tasks"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="@{() -> planDataClick.savePlanData(planData, 1)}"
          android:text="@string/create_plan_add_tasks" />
        <Button
          android:id="@+id/id_btn_plan_create_prizes"
...
