...
  <string name="task_saved_message">Element został zapisany</string>
  <string name="task_removed_message">Element został usunięty</string>
  <string name="task_removal_confirmation_negative_button">Nie</string>
  <string name="task_removal_confirmation_positive_button">Tak, usuń element</string>
  <string name="task_removal_confirmation_title">Potwierdzenie usunięcia elementu planu</string>
  <string name="task_removal_confirmation_message">Czy jesteś pewien, że chcesz usunąć ten elemnt?</string>
  <string name="plan_removal_confirmation_negative_button">Nie</string>
  <string name="plan_removal_confirmation_positive_button">Tak, usuń plan</string>
  <string name="plan_removal_confirmation_title">Potwierdzenie usunięcia planu</string>
  <string name="plan_removal_confirmation_message">Czy jesteś pewien, że chcesz usunąć ten plan?</string>
  <string name="child_removal_confirmation_negative_button">Nie</string>
  <string name="child_removal_confirmation_positive_button">Tak, usuń profil dziecka</string>
  <string name="child_removal_confirmation_title">Potwierdzenie usunięcia profilu dziecka</string>
  <string name="child_removal_confirmation_message">Czy jesteś pewien, że chcesz usunąć wybrany profil dziecka?</string>
...
